--- a/incident/thisfile.yml
+++ b/incident/thisfile.yml
@@ -10,7 +10,7 @@
    - louie
    - fred
  xmas-fifth-day:
-   calling-birds: four
+   calling-birds: sixteen
    french-hens: 3
    golden-rings: 5
    partridges:
